<resources>
    <string name="app_name">MultiScreen App</string>
    <string name="welcome_to_sukhmeet_s_cafe">Welcome to Sukhmeet\'s Cafe</string>
    <string name="enter_the_first_order">Enter the first order</string>
    <string name="enter_the_second_order">Enter the second order</string>
    <string name="enter_order_1">Enter order 1</string>
    <string name="enter_order_2">Enter order 2</string>
    <string name="enter_order_3">Enter order 3</string>
    <string name="enter_order_4">Enter order 4</string>
    <string name="order_now">Order Now</string>
    <string name="your_orders">Your Orders</string>
</resources>