<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#616161"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/welcome_to_sukhmeet_s_cafe"
            android:id="@+id/textView"
            android:textSize="26sp"
            android:textStyle="bold"
            android:background="#FFD706"
            android:textColor="#ff0000"
            android:gravity="center"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enter_order_1"
            android:layout_gravity="center"
            android:layout_margin="30sp"
            android:textSize="40sp"
            android:ems="10"
            android:textColor="#EDEDED"
            android:background="#00B8D4"
            android:id="@+id/order1"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enter_order_2"
            android:layout_gravity="center"
            android:layout_margin="30sp"
            android:textSize="40sp"
            android:ems="10"
            android:textColor="#EDEDED"
            android:background="#00B8D4"
            android:id="@+id/order2"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enter_order_3"
            android:layout_gravity="center"
            android:layout_margin="30sp"
            android:textSize="40sp"
            android:ems="10"
            android:textColor="#EDEDED"
            android:background="#00B8D4"
            android:id="@+id/order3"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enter_order_4"
            android:layout_gravity="center"
            android:layout_margin="30sp"
            android:textSize="40sp"
            android:ems="10"
            android:textColor="#EDEDED"
            android:background="#00B8D4"
            android:id="@+id/order4"/>

    <Button
            android:text="@string/order_now"
            android:layout_margin="20sp"
            android:textColor="#FFD600"
            android:backgroundTint="#FF00B7"
            android:textSize="40sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/orderbtn"/>

</LinearLayout>